<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jmd.p3_quizapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello, Welcome to the Quiz App! Let's test your Udaciousness"
            android:textSize="21sp"
            android:textStyle="bold"/>

        <!--First Question-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:text="@string/Question1" />

        <RadioGroup
            android:id="@+id/firstQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Answer1_Option1" />

            <RadioButton
                android:id="@+id/correctAnswerOne"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Answer1_Option2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Answer1_Option3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Answer1_Option4" />
        </RadioGroup>
        <!--Second Question-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:textSize="16sp"
            android:text="@string/Question2" />

        <RadioGroup
            android:id="@+id/secondQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/correctAnswerTwo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Answer2_Option1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Answer2_Option2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Answer2_Option3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Answer2_Option4" />
        </RadioGroup>
        <!--Third Question-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:textSize="16sp"
            android:text="@string/Question3" />

        <CheckBox
            android:id="@+id/q3_option1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Answer3_Option1" />

        <CheckBox
            android:id="@+id/q3_option2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Answer3_Option2" />

        <CheckBox
            android:id="@+id/q3_option3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Answer3_Option3" />

        <CheckBox
            android:id="@+id/q3_option4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Answer3_Option4" />
        <!--Fourth Question-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:textSize="16sp"
            android:text="@string/Question4" />

        <RadioGroup
            android:id="@+id/fourthQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/correctAnswerFour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Answer4_Option1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Answer4_Option2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Answer4_Option3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Answer4_Option4" />
        </RadioGroup>
        <!--Fifth Question-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:textSize="16sp"
            android:text="@string/Question5" />

        <EditText
            android:id="@+id/a5_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--Sixth Question-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:textSize="16sp"
            android:text="@string/Question6" />

        <CheckBox
            android:id="@+id/q6_option1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Answer6_Option1" />

        <CheckBox
            android:id="@+id/q6_option2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Answer6_Option2" />

        <CheckBox
            android:id="@+id/q6_option3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Answer6_Option3" />

        <CheckBox
            android:id="@+id/q6_option4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Answer6_Option4" />

        <CheckBox
            android:id="@+id/q6_option5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Answer6_Option5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submitQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit" />

            <Button
                android:id="@+id/resetQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reset" />
        </LinearLayout>

        <TextView
            android:id="@+id/summaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="16sp"
            android:typeface="monospace"/>
    </LinearLayout>

</ScrollView>
